2008-11-20  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): Correct thinko in --vp option with <5 arg chars.

2008-11-18  Jim Keniston  <jkenisto@us.ibm.com>

	PR 6879
	* runtime/uprobes2/uprobes_x86.c: Allow probing of instructions
	with fs: and gs: prefixes.  Apply fix from runtime/uprobes.

2008-11-18  Frank Ch. Eigler  <fche@elastic.org>

	PR6925.
	* main.cxx (usage,main): Process new --vp option.
	* session.h (perpass_verbose): New field.

2008-11-11  Stan Cox  <scox@redhat.com>

	* Makefile.am (pkglib_LIBRARIES): New.
	* Makefile.in: Regenerated
	* stapprobes.5.in (process.mark): New.
	* tapsets.cxx (register_patterns):  Add process.mark.
	(dwarf_builder::build): Likewise.

2008-11-14  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (common_probe_entryfn_{pro,epi}logue):
	Set "interruptible" to default true, thus disabling local_irq_*
	calls for all current probe point types.

2008-11-13  Wenji Huang  <wenji.huang@oracle.com>

        PR 7000
        * translate.cxx (c_unparser::visit_print_format): Add checking bound 
	for actual parameters.

2008-11-13  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec, configure.ac: Bump version to 0.8.
	* configure.in: Regenerated.

2008-11-11  Przemysław Pawełczyk <przemyslaw@pawelczyk.it>
	    Mark Wielaard <mjw@redhat.com>

	* tapsets.cxx (find_variable_and_frame_base): Add scope name to
	semantic error messages if available.

2008-11-06  Wenji Huang  <wenji.huang@oracle.com>

	PR 6998
	* tapsets.cxx (profile_builder): Add default kernel symbols to profile.

2008-11-06  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwflpp::module_address_to_global): 
	ET_EXEC needs no further relocation.

2008-11-04  Frank Ch. Eigler  <fche@elastic.org>

	From Masami Hiramatsu <mhiramat@redhat.com>, PR 6028.
	* tapsets.cxx (dwarf_derived_probe): New field access_vars, for
	tracking result from ..
	(dwarf_var_expanding_copy_visitor): Collect a flag about whether
	any $expressions appear within.